<resources>
    <string name="app_name" translatable="false">Fillgap</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
      <string name="desc">Add</string>
       <string name="some_hint">Search</string>
         <string name="some_hint1">Customer number</string>
          <string name="some_hint2">Customer Name</string>
            <string name="some_hint3">General</string>
            <string name="strAll">All</string>
            <string name="queries">Queries</string>
             <string name="configureaccount">Configure your gmail/yahoo account</string>
             <string name="update">Update</string>
             <string name="showpwd">Show Password</string>
             <string name="enterpwd">Enter pwd</string>
             <string name="entermail">Enter Mail(Google/Yahoo)</string>
             <string name="maildialogbox">Enter Google/Yahoo email and pwd to start sending Mails:</string>
             <string name="info">Information</string>
             <string name="impfb">Are you sure to import friends birthdays from facebook. Click OK to continue</string>
             <string name="schedule_messages">Schedule Message</string>
             <string name="phno">Phone numbers:</string>
              <string name="content">Content:</string>
              <string name="enternoemail">Enter Phone Number/Email</string>
              <string name="hint4">Split no/email with semicolon</string>
              <string name="attachquote">Attach Quote</string>
              <string name="loadfb">Click To Load FB Birthdays</string>
              <string name="entername">enter name</string>
              <string name="enternum">enter number</string>
              <string name="entergname">enter groupname</string>
              <string name="autoreply">Enter auto reply message</string>
              <string name="hint5">Enter contact number</string>
              <string name="from">From</string>
              <string name="to">To</string>
              <string name="birthday">Birthday</string>
              <string name="anniv">Anniversary</string>
              <string name="manualtype">wants to enter manually-type here</string>
              <string name="textlimit">Text Limit is over</string>
              <string name="select">Select</string>
              <string name="setfreq">Set Frequency</string>
              <string name="informto">Inform to:</string>
              <string name="times">times</string>
              <string name="call">Call</string>
              <string name="deleteall">Delete all</string>
               <string name="emotions">Emotions-Sharing</string>
                <string name="close">Close</string>
                <string name="tempelate">Tempelate</string>
                <string name="entercontfillgap">Enter contact number to fill the gap</string>
                 <string name="entermsg">Enter message</string>
                  <string name="ask">Ask?</string>
                  <string name="alarmtime">Alarm Time</string>
                <string name="safe">Safeguard</string>
                <string name="namecallhistory">Enter name, whom call history you want to know</string>
                <string name="numbercallhistory">Enter number, whom call history you want to know</string>
                <string name="nummsg">Enter number, whose messages you want to know</string>
                <string name="namemsg">Enter name, whose messages you want to know</string>
                <string name="existrecp">Make sure, receipient also an existing user of fillgap before sending</string>
                <string name="send">Send</string>
                 <string name="cancel">Cancel</string>
                  <string name="selectdate">select date</string>
                  <string name="set">Set</string>
                  <string name="namecalllog">Enter contact name, whose calllog you want to know</string>
                  <string name="numcalllog">Enter contact number, whose calllog you want to know</string>
              <string name="setfreqgreater">set frequency to greater than 0</string>
              <string name="everydaynotify">Notifies Every Day</string>
              <string name="everynotify">Notifies at Every</string>
              <string name="date">days</string>
              <string name="stopnotify">Notification stopped</string>
              <string name="enternamenum">Enter contact name/number</string>
              <string name="createnew">Create New</string>
              <string name="selectcontact">please select contact</string>
              <string name="ifdidntcall">If you did not call</string>
              <string name="daysnotification">days You will get Notified</string>
              <string name="forwarddailycalls">Forwad daily top 10 calllogs to</string>
              <string name="forwardweeklycalls">Forwad top 10 calllogs of this week to</string>
              <string name="forwardtop">Forwad top</string>
              <string name="monthcalllogs">calllogs of this month</string>
              <string name="anybodycalls">If anybody calls you more than</string>
              <string name="timesaday">times a day inform to the selected contacts</string>
              <string name="gotmorecalls">If you got calls more than</string>
               <string name="timesadaywthunknowncalls">times a day from an unknown number inform to  the selected contacts</string>
                <string name="gotmore">If you got more than</string>
                 <string name="unknownmsg"> msgs a day from an unknown number inform to  the selected contacts</string>
                <string name="timesaweek">times a in a week inform to  the selected contacts</string>
                <string name="enternumgreater">Enter any number greater than zero</string>
                 <string name="entercontactss">Enter Contacts</string>
                 <string name="splitmulcontacts">split multiple contacts with a semicolon</string>
                 <string name="inday">in a day inform to</string>
                 <string name="timesadayinform">times a day inform to</string>
                  <string name="timesadayinformunknownnum">times a day from an unknown number  inform to</string>
                   <string name="abusivemsg"> If your msg contains any abusive words inform to</string>
                   <string name="msginformto">msgs a day from an unknown number inform to</string>
                    <string name="weektimesinformto"> times a in a week inform to</string>
                     <string name="notifiescalllogto">Notifies about your calllogs to</string>
                     <string name="intimatecnum">Enter contact number to intimate them about your call logs</string>
                     <string name="forwardeachmsg">Forward each incoming message details to</string>
                     <string name="forwardeachincalls">Forward each incoming call details to</string>
                     <string name="forwardeachoutcalls">Forward each outgoing call details to</string>
                     <string name="forwardeachmsdcalls">Forward each missed call details to</string>
                     <string name="forwardbankmoney">Forward bank money withdraw statements</string>
                     <string name="informbatterystatus">Inform about your battery status to</string>
                     <string name="wnbattery"> when battery is low</string>
                     <string name="mobrestarts">whenever your mobile restarts</string>
                     <string name="ifdcall">If the call from</string>
                     <string name="notanswer">has not been answered then inform with an auto reply text-</string>
                    <string name="conversation">Conversations</string>
                    <string name="areyoursure">Are you sure to remove </string>
                    <string name="confirmation">Confirmation</string>
                    <string name="contactremove">Contact is Removed</string>
                    <string name="adding">Adding......</string>
                    <string name="yes">Yes</string>
                    <string name="no">No</string>
                    <string name="remalarm">Do you want to remove alarms Associated with</string>
                     <string name="stpalarm">Stop Alarm</string>
                     <string name="sttalarm">Start Alarm</string>
                     <string name="forwardcallandmsg">Forward each Call and Message details to</string>
                      <string name="today">Today</string>
                      <string name="week">Weekly</string>
                      <string name="month">Monthly</string>
                      <string name="addsafeguards">Add Safeguards</string>
                      <string name="noschdmsgs">No schedule messages for today</string>
                      <string name="todaynoalarm">No Alarms for today</string>
                      <string name="querytxt">Queries:-All can query you includes your safeguard</string>
                      <string name="querytxt1">Queries:-Excludes your safeguard remains all can query you</string>
                      <string name="querytxt2">Queries:-Your safeguard only query you</string>
                      <string name="querytxt3">Queries:-No one can query you</string>
                      <string name="notifyenable">Notification is enabled</string>
                      <string name="notifydisable">Notification is disabled</string>
                      <string name="nonotify">No notification found</string>
                      <string name="emailsmsenable">Email and SMS both are enabled</string>
                      <string name="setmail1">SMS and email are enabled;Plz configure your account</string>
                      <string name="setmail2">Email is enabled;sms is disabled</string>
                      <string name="setmail3">Email is enabled;sms is disabled and plz configure your account too</string>
                      <string name="setmail4">SMS is enabled;email is disabled</string>
                      <string name="setmail5">SMS is enabled;email is disabled and plz configure your account too</string>
                      <string name="setmail6">Email and SMS both are disabled</string>
                      <string name="setmail7">Email and SMS both are disabled and plz configure your account too</string>
                      <string name="setmail8">No mail and pwd found</string>
                      <string name="setalarm1">Your Safeguard and Userdefined alarms are enabled</string>
                      <string name="setalarm2">Your Safeguard alarm is enabled; Userdefined alarm is disabled</string>
                               <string name="sms">SMS</string>
                   <string name="duration">duration</string>
                   <string name="set_call_cost">Set call cost</string>
                   <string name="set_sms_cost">Set sms cost</string>
                    <string name="set_data_cost">Set data cost</string>
       <string name="confirm">Save</string>
       <string name="hnt_et_name">Name</string>
       <string name="hnt_et_mobile_phone">Mobile Phone</string>
       <string name="hnt_et_work_email">Work Email</string>
       <string name="str_btn_add">Add Contact</string>
       <string name="typemsg">Type message</string>
       <string name="auto_response_to_all_contacts">Auto Response To All</string>
       <string name="auto_response_to_fillgap_contacts">Auto Response To FillGap Contacts</string>
       <string name="alarms">ALARMS</string>
       <string name="user_defined_alarms">User defined alarms</string>
       <string name="default_alarms">Safeguard alarms</string>
       <string name="schedules">SCHEDULES</string>
       <string name="scheduling">Scheduling</string>
       <string name="alarm_notification">Alarm Notification</string>
         <string name="cost">Cost </string>
</resources>