<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
<Spinner
        android:id="@+id/country_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       
        android:layout_marginLeft="1dp" />

<TextView
    android:id="@+id/textView1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/set_call_cost" />

<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >
    <EditText
    android:id="@+id/cost_box"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:hint="@string/cost"
     />
    <Spinner
        android:id="@+id/cost_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       
        android:layout_marginLeft="1dp" />
    
    <TextView android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="/"
    />
      <EditText
    android:id="@+id/time_box"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:hint="@string/duration"
     />
      
       <Spinner
        android:id="@+id/time_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       
        android:layout_marginLeft="1dp" />
    </LinearLayout>
   
<TextView
    android:id="@+id/textView12"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/set_sms_cost" />

<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >
  <EditText
    android:id="@+id/sms_cost_box"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:hint="@string/cost"
     />  
      <Spinner
        android:id="@+id/sms_cost_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       
        android:layout_marginLeft="1dp" /> 
        <TextView android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="/"
    />
        <TextView android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/sms"
    />    
       </LinearLayout>
       <TextView
    android:id="@+id/data_textView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/set_data_cost" />      
 <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >
        
         <EditText
    android:id="@+id/data_cost_box"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:hint="@string/cost"
     />
    <Spinner
        android:id="@+id/data_cost_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       
        android:layout_marginLeft="1dp" />
    
    <TextView android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="/"
    />
      <EditText
    android:id="@+id/data_time_box"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:hint="@string/duration"
     />
      
       <Spinner
        android:id="@+id/data_time_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       
        android:layout_marginLeft="1dp" />
  
        </LinearLayout>      

<Button
    android:id="@+id/update"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/update" 
   
    android:layout_gravity="center_horizontal"/>

</LinearLayout>