<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
         android:background="#FFFFFF" >
  
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
         android:background="#8DB600"
        android:text="@string/queries"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                  android:textSize="15sp"
                   android:textStyle="bold"
                android:text="@string/auto_response_to_all_contacts" />

            <ToggleButton
                android:id="@+id/auto_responce_to_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="5dp"
                android:text="ToggleButton" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="5dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textv"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                 android:textSize="15sp"
                  android:textStyle="bold"
                android:text="@string/auto_response_to_fillgap_contacts" />

            <ToggleButton
                android:id="@+id/auto_responce_to_fillgap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
          android:background="#89CFF0"
        android:text="@string/alarms"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textView4"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                 android:textStyle="bold"
                android:text="@string/user_defined_alarms" />

            <ToggleButton
                android:id="@+id/user_defined"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="ToggleButton" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/TextView01"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                  android:textSize="15sp"
                   android:textStyle="bold"
                android:text="@string/default_alarms" />

            <ToggleButton
                android:id="@+id/default_alarms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="ToggleButton" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textView6"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                  android:textSize="15sp"
                   android:textStyle="bold"
                android:text="@string/alarm_notification" />

            <ToggleButton
                android:id="@+id/alarm_notification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="ToggleButton" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/TextView03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
          android:background="#FFF700"
        android:text="@string/schedules"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="5dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView5"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
              android:textSize="15sp"
               android:textStyle="bold"
            android:text="@string/scheduling" />

        <ToggleButton
            android:id="@+id/schedule"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:text="ToggleButton" />
    </LinearLayout>

    

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="5dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView7"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
              android:textSize="15sp"
            android:text="SMS"
            android:textColor="#000000"
            android:textStyle="bold" />

        <ToggleButton
            android:id="@+id/tsms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="ToggleButton" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="5dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView8"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
              android:textSize="15sp"
            android:text="EMAIL"
            android:textColor="#000000"
            android:textStyle="bold" />

        <ToggleButton
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="ToggleButton" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="5dp"
        android:orientation="horizontal" >
    </LinearLayout>

    <Button
        android:id="@+id/configure"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_weight="0.70"
        android:textSize="15sp"
        android:textStyle="bold"
          android:background="#007FFF"
        android:text="@string/configureaccount"
        android:textColor="#ffffff" />
</LinearLayout>

</ScrollView>