<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".MainActivity" >

         <RelativeLayout
        android:id="@+id/titlebar"
        android:layout_width="match_parent"
       android:layout_height="50dp"
        android:layout_alignParentTop="true"
       android:background="#ffffff" >

        <EditText
            android:id="@+id/myFilter"
            android:layout_width="175dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:ems="10"
             android:hint="@string/some_hint"
            android:textColor="#000000" >

  <requestFocus />
 </EditText>
 <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"        
        android:paddingTop="25dp"       
        android:gravity="right"
        android:paddingRight="5dp"
        >
        
   		<TextView 
   		    android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/strAll"
        	 android:textSize="16.0sp"
        	android:textColor="#000000"
   		    />        
   		    
	    <CheckBox
	        android:id="@+id/chkAll"        
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        />    
    
    </LinearLayout>
        
    </RelativeLayout>

<ListView
   android:layout_width="match_parent"
   android:layout_height="wrap_content"
   android:layout_above="@+id/button1"
   android:layout_below="@+id/titlebar"
   android:background="#2F2E2E"
   android:id="@+id/lv"/>
 <Button
     android:id="@+id/button1"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_alignParentBottom="true"
     android:layout_alignParentLeft="true"
     android:layout_marginLeft="44dp"
     android:text="@string/select" />

 </RelativeLayout>
       
